# Go-My-Car

./: .gitignore  README.md
Docs/: algorithm-design.tex
Examples/OpenCV/: main.cpp
GoMyCar/: CMakeLists.txt  main.cpp
GoMyCar/CarController/: CarController.cpp  CarController.h
GoMyCar/ImgProcessing/: preProcessing.cpp  preProcessing.h
GoMyCar/PIDController/: PIDController.cpp  PIDController.h
GoMyCar/utils/: coordinateSystem.cpp  coordinateSystem.h
